<resources>
    <string name="btn_settings">Settings</string>
    <string name="btn_profile">Profile</string>
    <string name="btn_save">Save Preferences</string>
    <string name="btn_reset">Reset Preferences</string>
    <string name="hint_username">Username</string>
    <string name="hint_email">Email</string>
    <string name="hint_theme">Theme</string>
    <string name="label_username">Username:</string>
    <string name="label_email">Email:</string>
    <string name="label_theme">Theme:</string>
    <string name="username_display">Username: %1$s</string>
    <string name="email_display">Email: %1$s</string>
    <string name="theme_display">Theme: %1$s</string>
    <string name="app_name">Assignment2</string>

</resources>
